# app/greeter/internal/server/http.go
@@ -3,8 +3,8 @@ package server
 import (
 	nethttp "net/http"
 
+	coffeev1 "greeter/api/greeter/coffee/v1"
 	v1 "greeter/api/greeter/helloworld/v1"
-	ordersv1 "greeter/api/greeter/orders/v1"
 	"greeter/app/greeter/internal/conf"
 	"greeter/app/greeter/internal/service"
 
@@ -16,7 +16,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, orders *service.OrdersService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, coffee *service.CoffeeService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -36,7 +36,7 @@ func NewHTTPServer(c *conf.Server, greeter *service.GreeterService, orders *serv
 	srv := http.NewServer(opts...)
 	srv.HandleFunc("/healthz", healthz)
 	v1.RegisterGreeterHTTPServer(srv, greeter)
-	ordersv1.RegisterOrdersHTTPServer(srv, orders)
+	coffeev1.RegisterCoffeeHTTPServer(srv, coffee)
 	return srv
 }
 
